Валидация почты с помощью SMTP и письма
